--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^2.6.0",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-postcss": "^3.2.0",
