--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "bluebird": "^3.7.2",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.6.0",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-google-gtag": "^2.6.0",
+    "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-postcss": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.9.1",
     "gatsby-plugin-sitemap": "^2.7.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-source-wordpress": "^3.1.46",
     "gatsby-transformer-sharp": "^2.7.0",
@@ -24,7 +24,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "prettier": "2.1.2",
